# dna-repeat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/dna_repeat/: __init__.py  ai.py  cli.py  constants.py  core.py  error.py
tests/: bad.fasta  test.fasta  test_bin.py  test_clean_and_check_seq.py  test_count_fas.py  test_repeat_find.py
