[project]
name = "dna-repeat"
version = "0.2.0"
description = "CLI app that finds repeats in a DNA sequence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",    
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
dna-repeat = "dna_repeat.cli:main"
